@@ -95,4 +95,6 @@ interface IWebFramePrivate : IUnknown
     HRESULT allowsFollowingLink([in] BSTR url, [out, retval] BOOL* result);
 
     HRESULT stringByEvaluatingJavaScriptInIsolatedWorld([in] unsigned worldID, [in] OLE_HANDLE jsGlobalObject, [in] BSTR script, [out, retval] BSTR* result);
+
+    [local] JSGlobalContextRef contextForWorldID([in] unsigned worldID);
 }
