@@ -1,3 +1,12 @@
+2009-10-25  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by John Sullivan.
+
+        Add contextForWorldID to the IWebFramePrivate interface.
+
+        * Interfaces/IWebFramePrivate.idl:
+        * WebFrame.h:
+
 2009-10-25  Sam Weinig  <sam@webkit.org>
 
         Another try at fixing windows.
